--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,9 @@ a:hover,
 a:focus {
     text-decoration: underline;
 }
+body {
+    font-family: 'Source Sans Pro', sans-serif;
+}
 
 /* LAYOUT CSS */
 #layout {
@@ -97,7 +100,6 @@ a:focus {
     margin-left: 1em;
 }
 .post-description {
-    font-family: Georgia, "Cambria", serif;
     color: #444;
     line-height: 1.8em;
 }
