changed color scheme

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ body {
     bottom: 0;
     width: 25%;
     margin-left: -25%;
-    background: rgb(24, 33, 61);
+    background:#2E3939;
     color: #fff;
 }
 
