--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,10 +31,10 @@
           <nav class="nav">
             <ul class="nav-list">
               <li class="nav-item">
-                <a class="pure-button" href="http://purecss.io">Pure</a>
+                <a class="pure-button" href="https://github.com/nerdgrass" title="Code from Nerdgrass, thanks github!" target="_blank">github</a>
               </li>
               <li class="nav-item">
-                <a class="pure-button" href="http://yuilibrary.com">YUI Library</a>
+                <a class="pure-button" href="https://twitter.com/nerdgrass" title="Tweets from nerdgrass" target="_blank">twitter</a>
               </li>
             </ul>
           </nav>
@@ -45,6 +45,7 @@
         <div class="content">
           {{ content }}
 
+          <!-- To be implemented when I have more content!
           <footer class="footer">
             <div class="pure-menu pure-menu-open pure-menu-horizontal">
               <ul>
@@ -53,7 +54,7 @@
                 <li><a href="http://github.com/yui/pure/">Github</a></li>
               </ul>
             </div>
-          </footer>
+          </footer> -->
         </div>
       </div>
     </div>
