--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,11 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<div class="post-content">
+	<h2 class="post-title">{{ page.title }}</h2>
+	<p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
-{{ content }}
+	<div class="post">
+		{{ content }}
+	</div>
 </div>
