added loading animations

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="pure-g-r" id="layout">
-      <div class="sidebar pure-u">
+      <div class="sidebar pure-u animated fadeInLeft">
         <header class="header">
           <hgroup>
             <h1 class="brand-title"><a href="/">{{ site.name }}</a></h1>
@@ -42,7 +42,7 @@
       </div>
 
       <div class="pure-u-1">
-        <div class="content">
+        <div class="content animated fadeInUpBig">
           {{ content }}
 
           <!-- To be implemented when I have more content!
