added body loading animation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <link rel="stylesheet" href="/css/main.css">
 
   </head>
-  <body>
+  <body class="animated fadeIn">
     <div class="pure-g-r" id="layout">
       <div class="sidebar pure-u animated fadeInLeft">
         <header class="header">
