changed loading animations for posts to feel less wonky

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: default-inside
 ---
-<div class="post-content">
+<div class="post-content animated fadeInDownBig">
 	<h2 class="post-title">{{ page.title }}</h2>
 	<p class="meta">{{ page.date | date_to_string }}</p>
 
