--- a/_layouts/default-inside.html
+++ b/_layouts/default-inside.html
@@ -19,9 +19,9 @@
       <link rel="stylesheet" href="/css/main.css">
 
   </head>
-  <body class="animated fadeIn">
+  <body class="">
     <div class="pure-g-r" id="layout">
-      <div class="sidebar pure-u animated fadeInLeft">
+      <div class="sidebar pure-u">
         <header class="header">
           <hgroup>
             <h1 class="brand-title"><a href="/">{{ site.name }}</a></h1>
