added back button to posts

--- a/_layouts/default-inside.html
+++ b/_layouts/default-inside.html
@@ -45,7 +45,7 @@
         <div class="content">
           {{ content }}
 
-          <!-- To be implemented when I have more content!
+
           <footer class="footer">
             <div class="pure-menu pure-menu-open pure-menu-horizontal">
               <ul>
@@ -54,7 +54,7 @@
                 <li><a href="http://github.com/yui/pure/">Github</a></li>
               </ul>
             </div>
-          </footer> -->
+          </footer>
         </div>
       </div>
     </div>
