--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,4 +12,43 @@
 // Styles, remove these to partials once section is complete
 //
 
-h1 {color:red;}
+section {
+  min-height: 65vh;
+  padding-top: 4em;
+  padding-bottom: 4em
+}
+
+// Sections
+.splash {
+  width:100%;
+  min-height: 65vh;
+  background: DARKSLATEGRAY;
+
+
+  h1 {
+    margin-top: 1em;
+    color: floralwhite;
+    text-align: center;
+  }
+  h3 {
+    color: floralwhite;
+    text-align: center;
+  }
+}
+
+.about {
+  background: whitesmoke;
+}
+
+.design {
+  background: whitesmoke;
+}
+
+.code {
+  background: whitesmoke;
+}
+
+.footer {
+  background: darkslategray;
+  min-height: 25vh;
+}
